hphp/hack/test/ifc/check/for.php.exp
=== IFC analysis results for for.php
File "for.php", line 22, characters 28-39:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "for.php", line 5, characters 14-25:
  This may be the data source with policy `PRIVATE`
  File "for.php", line 7, characters 14-24:
  This may be the data sink with policy `PUBLIC`
File "for.php", line 37, characters 28-39:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "for.php", line 5, characters 14-25:
  This may be the data source with policy `PRIVATE`
  File "for.php", line 7, characters 14-24:
  This may be the data sink with policy `PUBLIC`
